Update github username

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = Jeff Geerling
-  email = geerlingguy@mac.com
+  name = Jere Julian
+  email = jere@jerejulian.org
 [core]
   editor = vi
   excludesfile = ~/.gitignore
