Update github email

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
   name = Jere Julian
-  email = jere@jerejulian.org
+  email = github@stagerigger.com
 [core]
   editor = vi
   excludesfile = ~/.gitignore
